<resources>

    <string name="app_name">Super Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="emptyList">empty</string>
    <string name="title">Title</string>
    <string name="title_hint">Note title</string>
    <string name="content">Content</string>
    <string name="content_hint">Note content</string>
    <string name="yes">yes</string>
    <string name="no">No</string>

    <!-- string for alertDialog -->
    <string name="dialog_title">Confirm</string>
    <string name="dialog_confirm_save_message">Are you sure you want to exit.\n Do you want to save?</string>
    <string name="dialog_confirm_delete_message">Are you sure you want to delete?</string>
    <string name="dialog_alter_empty_message">Your title is empty. Please, enter your title.</string>

</resources>