<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray333" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <ImageButton
            android:id="@+id/btn_save_note"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:src="@drawable/ico_save" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:text="@string/title"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/edit_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:hint="@string/title_hint"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:text="@string/content"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/edit_note_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_small"
        android:gravity="top|left"
        android:hint="@string/content_hint" />

</LinearLayout>